Fix overflow override styling

--- a/app/assets/stylesheets/media/_mobile.scss
+++ b/app/assets/stylesheets/media/_mobile.scss
@@ -10,8 +10,8 @@
     }
   }
 
-  div#editor-buttons, .big {
-    overflow: visible;
+  div#editor-buttons, input[type=submit].big {
+    overflow-x: visible;
   }
 
   .desktop {
